# uala-tracker

./: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: issue-auto-label.yml  pr-validation.yml  python-tests.yml
api/extract/: index.py  process.py  requirements-dev.txt  requirements.txt
api/extract/tests/: test_extract.py
api/ingest/: index.py
api/ingest/tests/: test_ingest.py
app/: layout.tsx
app/(auth)/callback/: route.ts
app/(auth)/error/: page.tsx
app/(auth)/login/: page.tsx
app/(auth)/sign-up/: page.tsx
app/(auth)/sign-up-success/: page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/settings/: page.tsx
app/(dashboard)/statements/: page.tsx
app/(dashboard)/tasas/: page.tsx
app/(dashboard)/upload/: page.tsx
app/demo/: layout.tsx  page.tsx
components/: theme-provider.tsx
components/dashboard/: active-installments.tsx  app-sidebar.tsx  cftea-evolution-chart.tsx  index.ts  monthly-evolution.tsx  period-breakdown.tsx  statements-list.tsx  summary-card.tsx  tasas-section.tsx  transactions-table.tsx
components/settings/: api-keys-manager.tsx
components/ui/: button.tsx
components/upload/: pdf-upload.tsx
docs/: MAKE_SETUP.md  N8N_SETUP.md
lib/: actions.ts  api-keys.ts  format.ts  installments.ts  tasas.ts  types.ts  url.ts
lib/supabase/: middleware.ts  queries.ts
scripts/: 001_schema.sql  002_api_keys.sql  init-labels.sh
(+13 files in other folders)
